--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
-<!-- Cheat Code UI -->
+<!DOCTYPE html>
+<html lang="en"> 
+<head> 
+  <meta charset="UTF-8" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+  <title>Grow a Garden</title> 
+  <link rel="stylesheet" href="style.css" /> 
+</head> 
+<body> 
+  <div class="game-container">
+    <h1>🌼 Grow a Garden 🌼</h1>
+
+    <div class="button-group">
+      <button id="plantModeBtn">Plant Mode: OFF</button>
+      <button id="clearBtn">Clear All</button> 
+    </div> 
+
+    <div class="garden" id="garden"></div>
+
+    <p class="instructions"> 
+      Click "Plant Mode" to toggle planting. Then click anywhere in the garden to plant a seed. Click a flower to remove it. 
+    </p> 
+  </div> 
+  <!-- Cheat Code UI -->
 <div id="cheatContainer" style="position: fixed; bottom: 10px; right: 10px;">
   <button id="cheatBtn">💻 Cheat</button>
   <input
@@ -8,3 +31,7 @@
     style="display: none; margin-left: 5px; padding: 5px;"
   />
 </div>
+
+  <script src="script.js"></script> 
+</body> 
+</html>
