--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     type="text"
     id="cheatInput"
     placeholder="Enter cheat code"
-    style="display: none; margin-left: 5px; padding: 5px;"
+    style="display: none; margin-left: 5px; padding: 5px; font-family: monospace;"
   />
 </div>
-
   <script src="script.js"></script> 
 </body> 
 </html>
