--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
   <div id="controls">
     <button id="plantModeBtn">Plant Mode: OFF</button>
     <button id="clearBtn">Clear All</button>
-  </div>
+  </div><div id="controls">
+  <button id="plantModeBtn">Plant Mode: OFF</button>
+  <button id="clearBtn">Clear All</button>
+</div>
+
 
   <div id="garden"></div>
 
