--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
 <body>
 
   <div id="controls">
-    <button id="plantModeBtn">Plant Mode: OFF</button>
-    <button id="clearBtn">Clear All</button>
-  </div><div id="controls">
   <button id="plantModeBtn">Plant Mode: OFF</button>
   <button id="clearBtn">Clear All</button>
+  <button id="collectBtn">Collect All</button> <!-- ✅ New -->
 </div>
+
 
 
   <div id="garden"></div>
